ipc/ipdl/test/ipdl/ok/messageCompress.ipdl
intr protocol messageCompress {
child:
    async foo() compress;
};
