ipc/ipdl/test/ipdl/error/rpcMessageCompress.ipdl
rpc protocol rpcMessageCompress {
parent:
    rpc foo() compress;
child:
    rpc bar() compress;
};
